# impostor

./: .gitignore  .pdm-python  Cargo.toml  LICENSE_APACHE  README.md  Untitled.ipynb  _pyproject.toml  dodo.py  example.py  impostor.pyi  leaves.ipynb  pyproject.toml  test1.toml
assets/scenes/: start_scene.scn.ron
crates/impostor/: Cargo.toml
crates/impostor/assets/scenes/: start_scene.scn.ron
crates/impostor/examples/: gltf.rs  gui_test.rs  save2.rs  save_joints.rs  sim_growth.rs  sim_growth_nodes.rs  skinned_branches.rs
crates/impostor/src/: main.rs  save_new.rs  test.rs
crates/impostor/src/schema/: mod.rs
crates/impostor_cellulose/: Cargo.toml
crates/impostor_cellulose/src/: cellulose.rs  components.rs  lib.rs  main.rs  structure.rs
crates/impostor_editor_camera/: Cargo.toml
crates/impostor_editor_camera/src/: editor_camera.rs  lib.rs
crates/impostor_modeller/: Cargo.toml
crates/impostor_modeller/src/: lib.rs  plant.rs  plant_systems.rs
crates/impostor_plant/: Cargo.toml
crates/impostor_plant/src/: lib.rs  plant.rs  plant_systems.old.rs  plant_systems.rs
crates/impostor_plant_body/: Cargo.toml
crates/impostor_plant_body/src/: lib.rs  main.rs  plant_body.rs  structure.rs
crates/impostor_schemas/: Cargo.toml
crates/impostor_schemas/src/: lib.rs  schemas.rs  ui.rs  updaters.rs
crates/impostor_schemas/src/schemas/: mod.rs
crates/impostor_soft_body/: Cargo.toml
crates/impostor_soft_body/src/: components.rs  lib.rs  main.rs  structure.rs
crates/impostor_teleop/: Cargo.toml
crates/impostor_teleop/src/: lib.rs  teleop.rs
crates/impostor_tomato/: Cargo.toml
crates/impostor_tomato/src/: create_demo_plant.rs  fabrik.rs  lib.rs  main.rs  mesh_builder.rs  tomato_systems.rs
crates/impostor_xp/: Cargo.toml
crates/impostor_xp/src/: rigid_body.rs
crates/impostor_xpbd/: Cargo.toml
crates/impostor_xpbd/src/: lib.rs  main.rs
crates/impostor_xpbd/src/constraints/: bend_constraint.rs  bend_twist_constraint.rs  edge_constraint.rs  isometric_bending_constraint.rs  isometric_bending_constraint_wip.rs  mod.rs  position_based_cosserat_rods.rs  stem_bend_constraint.rs  volume_constraint.rs  xpbd_constraint.rs
crates/impostor_xpbd/src/constraints/position_based_cosserat_rods/: bend_twist_constraint.rs  mod.rs  stretch_shear_constraint.rs
crates/impostor_xpbd/src/structs/: debug_figure.rs  mod.rs  orientation.rs  particle.rs  soft_body.rs  time_integration.rs  xpbd_context.rs
crates/impostor_xpbd/src/structs/body_builders/: helix.rs  mod.rs  rod.rs  stem.rs  triangle_pillar.rs
crates/impostor_xpbd/src/structs/figures/: debug_figure.rs  fig_line.rs  mod.rs
crates/necklace_solver/: Cargo.toml
crates/necklace_solver/src/: components.rs  debug.rs  lib.rs  main.rs  particle_drag.rs  solver.rs  structures.rs
crates/necklace_solver/src/structures/: mod.rs  tet_pillar.rs
crates/push_test/: Cargo.toml
crates/push_test/src/: components.rs  fabrik.rs  lib.rs  main.rs
demos/car_teleop/: Cargo.toml
demos/car_teleop/assets/scenes/: start_scene.scn.ron
demos/car_teleop/src/: main.rs
demos/toy_physics/: Cargo.toml
demos/toy_physics/src/: main.rs  test.rs
examples/: extrude.py  gui_test.rs  lsystem.py  save.rs  save_joints.rs  sim_growth.rs  sim_growth_nodes.rs  skeleton.rs  skinned_branches.rs  stem_standing.rs  strawberry.py  strawberry_newton.py
impostor/: composer.py  functions.py  mesh.py  mujoco.py  plant.py  rigid_transformation.py  run_functions.py  run_issac.py  run_nurbs.py  run_plant.py  run_start.py  run_strawberry.py  slingshot.py  try_mj_elastic.py  type_set.py  utils.py
impostor-core/: Cargo.toml  pyproject.toml
impostor-core/src/: lib.rs
impostor-msgs/: Cargo.toml
impostor-msgs/src/: gen_msgs.rs  lib.rs
impostor/components/: __init__.py  core.py  leaf.py  physics.py  rigid_transformation.py  stem_ring.py
impostor/messages/: __init__.py  messages.py
impostor/parts/: __init__.py  collision.py  core.py  crown.py  growth_config.py  growth_plan.py  leaf.py  mass.py  rigid_transformation.py  scaffolding.py  scaffolding_solver.py  sphere_collider.py  spring.py  stepper.py  strawberry.py  vascular.py
impostor/systems/: __init__.py  branching.py  core.py  growth.py  leaf.py  leafing.py  mesh.py  mujoco.py  physics.py  rerun.py  secondary_growth.py
notebooks/: curve.ipynb
python/: impostor.py
scripts/: build.sh  setup_vscode.py  start.sh
src/: curve.rs  lib.rs  main.rs  ragdoll.rs  trail.rs  values.rs  world.rs
src/impostor_gen/: branch_symbols.py  context.py  core_symbols.py  curve.py  extrude.py  interpolate.py  l_systems.py  leaf.py  material.py  mesh2d.py  mesh3d.py  mesh_builder.py  mesh_utils.py  newton_builder.py  rule.py  shapes.py  symbol.py  trail.py  transform_3d.py  usd_animation.py  vec3.py
src/impostor_gen/engine/: __init__.py  ageing.py  branch_symbols.py  context.py  core_symbols.py  interpolate.py  l_systems.py  rule.py  stem.py  symbol.py
src/impostor_gen/mesh/: extrude.py  leaf_mesh_context.py  mesh2d.py  mesh3d.py  mesh_builder.py  mesh_context.py  mesh_utils.py  stem_mesh_context.py
textures/: leaves.ipynb  stem.ipynb  utils.py
