[package]
name = "impostor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.8.0", features=["jpeg"]}
# bevy_config_cam = { version = "0.3.0"}
bevy_rapier3d = { version = "*", features = [ "simd-stable", "debug-render" ] }
rand = "0.8.5"
itertools = "0.10.3"
nalgebra = "0.30.1"
# bevy-inspector-egui = "0.11.0"

[[bin]]
name = "main"
path = "src/main.rs"


[[bin]]
name = "ragdoll"
path = "src/ragdoll.rs"