[workspace]
# members = ["crates/", "demos/*"]
members = [
    "crates/impostor_soft_body",
    "crates/push_test",
    "crates/impostor_editor_camera",
    "crates/impostor_tomato",
]
resolver = "2"
license = "MIT OR Apache-2.0"

[profile.dev.package.bevy_rapier3d]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1

[workspace.dependencies]
bevy_mod_picking = "0.11.0"
bevy_transform_gizmo = { git = "https://github.com/woodroww/my_bevy_transform_gizmo.git", branch = "with_parents" }
