[workspace]
# members = ["crates/", "demos/*"]
members = [
    # "crates/impostor_soft_body",
    # "crates/impostor_plant_body",
    "crates/impostor_xpbd",
    # "crates/push_test",
    # "crates/impostor_editor_camera",
    # "crates/impostor_tomato",
]
resolver = "2"
license = "MIT OR Apache-2.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
