[project]
name = "impostor-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andras Polgar", email = "azazdeaz@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.1",
    "pydantic>=2.11.7",
    "rerun-sdk>=0.24.0",
    "scipy>=1.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# In pyproject.toml
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "scipy-stubs>=1.16.0.2",
]
