[project]
name = "impostor-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andras Polgar", email = "azazdeaz@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "imgui-bundle==1.92.0",
    "newton[examples]>=1.0.0",
    "numpy>=2.3.1",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "rerun-sdk>=0.24.0",
    "scipy>=1.16.0",
    "triangle>=20250106",
    "trimesh>=4.8.1",
    "usd-core>=25.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# In pyproject.toml
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "google-genai>=1.36.0",
    "matplotlib>=3.10.7",
    "pyqt6>=6.9.1",
    "python-dotenv>=1.1.1",
    "ruff>=0.13.2",
    "scipy-stubs>=1.16.0.2",
    "ty>=0.0.21",
    "types-usd>=24.5.2",
]
