[package]
name = "impostor-core"
version = "0.1.0"
edition = "2021"


[lib]
name = "impostor_core"
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"  # Point to the library entry point

[dependencies]
impostor-msgs = { path = "../impostor-msgs" }
curvo = "0.1.30"
nalgebra = "0.33.0"
pyo3 = "0.22.0"
rerun = { version = "0.18.2", features = ["native_viewer"] }
