[package]
name = "impostor-core"
version = "0.1.0"
edition = "2021"


[lib]
name = "impostor_core"
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"  # Point to the library entry point

[dependencies]
impostor-msgs = { path = "../impostor-msgs" }
curvo = "0.1.30"
nalgebra = "0.33.0"
pyo3 = { version = "0.23.2", features = ["anyhow"] }
rerun = { version = "0.20.2", features = ["native_viewer"] }
bincode = "1.3.3"
pyo3-log = "0.12.0"
log = "0.4.22"
anyhow = "1.0.93"
