[package]
name = "impostor_plant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# impostor_schemas = { path = "../impostor_schemas" }
bevy = "0.10.1"
bevy_prototype_debug_lines = { version = "0.10.1", features = ["3d"] }
rand = "0.8.5"
itertools = "0.10.3"
nalgebra = "0.30.1"
bevy-inspector-egui = "0.12.1"
ptree = "0.4.0"
bevy_easings = "0.8.1"