[package]
name = "impostor_plant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
impostor_schemas = { path = "../impostor_schemas" }
bevy = {version = "0.8.0", features=["jpeg"]}
bevy_rapier3d = { version = "0.16.0", features = [ "simd-stable", "debug-render", "serde-serialize" ] }
rand = "0.8.5"
itertools = "0.10.3"
nalgebra = "0.30.1"