[package]
name = "impostor_soft_body"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy_rapier3d = { version = "0.20.0", features = ["simd-stable", "debug-render", "serde-serialize"] }
itertools-num = "0.1.3"
nalgebra = "0.32.1"
