[package]
name = "impostor_teleop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
impostor_schemas = { path = "../impostor_schemas" }
bevy = {version = "0.8.0"}
bevy_rapier3d = { version = "0.16.0", features = [ "simd-stable" ] }