[package]
name = "necklace_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aery = "0.5.2"
bevy = "0.12.1"
bevy_panorbit_camera = "0.11.1"
colorgrad = "0.6.2"
itertools = "0.12.1"
parry3d = "0.13.6"
rand = "0.8.5"
rerun = "0.12.1"
