[package]
name = "push_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bevy = "0.9.1"
bevy_prototype_debug_lines ={version="0.9.0", features=["3d"]}
bevy_rapier3d = { version = "0.20.0", features = ["simd-stable", "debug-render", "serde-serialize"] }
impostor_editor_camera = { path = "../impostor_editor_camera" }
nalgebra = "0.32.1"
random_color = "0.6.1"
rand = "0.8.5"
itertools = "0.10.5"
bevy_transform_gizmo = "0.5.0"
bevy_mod_picking = "0.11.0"
bevy-inspector-egui = "0.17.0"
