[package]
name = "car_teleop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
impostor_schemas = { path = "../../crates/impostor_schemas" }
impostor_teleop = { path = "../../crates/impostor_teleop" }
bevy = {version = "0.8.0", features=["jpeg"]}
# bevy_config_cam = { version = "0.3.0"}
bevy_rapier3d = { version = "0.16.0", features = [ "simd-stable", "debug-render", "serde-serialize" ] }
rand = "0.8.5"
itertools = "0.10.3"
nalgebra = "0.30.1"
bevy-inspector-egui = "0.12.1"
bevy_egui = "0.15.0"

[[bin]]
name = "car-teleop-demo"
path = "src/main.rs"